--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@ $link-background-color: green;
 
 * {
   font-size: 16px;
+  box-sizing: border-box;
 }
 
 .App {
@@ -12,7 +13,7 @@ $link-background-color: green;
   width: 100vw;
 }
 
-.page {
+.container {
   background-color: $background-color;
   min-height: 100vh;
   display: flex;
@@ -20,11 +21,30 @@ $link-background-color: green;
   align-items: center;
   justify-content: center;
   color: $text-color;
+  padding: 20px;
+}
+
+.page {
+  height: 80vh;
+  width: 100%;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 1px solid #444;
+  padding: 20px;
 }
 
 .header {
   display: flex;
   flex-direction: column;
+  align-items: center;
+
+  img {
+    width: 150px;
+    height: 150px;
+    clip-path: circle(50% at 50% 50%);
+  }
 }
 
 .App-logo {
