--- a/src/App.scss
+++ b/src/App.scss
@@ -39,11 +39,15 @@ $link-background-color: green;
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  img {
-    width: 150px;
-    height: 150px;
+  .profile-pic {
+    width: 100px;
+    height: 100px;
     clip-path: circle(50% at 50% 50%);
+    margin-bottom: 1rem;
+  }
+
+  .profile-username {
+    color: $text-color;
   }
 }
 
