--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,4 @@
-$text-color: white;
-$background-color: #282c34;
-$link-background-color: green;
+@import './variables.scss';
 
 @mixin flex-column-center {
   flex-direction: column;
@@ -17,6 +15,7 @@ $link-background-color: green;
   text-align: center;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 .container {
@@ -41,6 +40,7 @@ $link-background-color: green;
 
 .header {
   display: flex;
+  margin-bottom: 4rem;
   @include flex-column-center;
   .profile-pic {
     width: 100px;
