--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -15,7 +15,6 @@
   text-align: center;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
 }
 
 .container {
@@ -28,7 +27,7 @@
 }
 
 .page {
-  height: 80vh;
+  min-height: 80vh;
   width: 100%;
   max-width: 800px;
   display: flex;
@@ -54,8 +53,14 @@
   }
 }
 
+.footer {
+  width: 100%;
+  @include flex-column-center;
+  margin-top: 20px;
+}
+
 .App-logo {
   svg {
-    color: $text-color;
+    color: white;
   }
 }
