--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,3 @@
-$text-color: white;
+$text-color: #222;
 $background-color: #282c34;
-$link-background-color: #538953;
+$link-background-color: #39e09b;
