--- a/src/styles/List.scss
+++ b/src/styles/List.scss
@@ -35,6 +35,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-bottom: 30px;
 
   .player-image {
     min-width: 25%;
@@ -48,7 +49,7 @@
     margin-right: 20px;
   }
   .title-description {
-    font-size: 24px;
+    font-size: 20px;
     margin: 0;
     overflow: hidden;
     height: 30px;
@@ -56,4 +57,30 @@
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+}
+
+.music-link-item {
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid lighten($icon-color, 50);
+
+  .platform-name {
+    text-transform: capitalize;
+    flex-grow: 2;
+    text-align: left;
+  }
+  .social-icon {
+    color: $icon-color;
+    flex-grow: 1;
+    margin-right: 20px;
+    width: 40px;
+    max-width: 40px;
+  }
+}
+
+.right-arrow {
+  transform: rotate(-90deg);
 }
