add theming so that we can render the styling according to some user preferences

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import 'theme.scss';
 
 @mixin flex-column-center {
   flex-direction: column;
@@ -18,11 +19,11 @@
 }
 
 .container {
-  background-color: $background-color;
+  @include variable(container-background-color, background-color, black);
   min-height: 100vh;
   display: flex;
   @include flex-column-center;
-  color: $text-color;
+  @include variable(text-color, color, white);
   padding: 20px;
 }
 
@@ -49,7 +50,7 @@
   }
 
   .profile-username {
-    color: $text-color;
+    @include variable(text-color, color, white);
   }
 }
 
@@ -57,10 +58,4 @@
   width: 100%;
   @include flex-column-center;
   margin-top: 20px;
-}
-
-.App-logo {
-  svg {
-    color: white;
-  }
 }
