--- a/src/styles/List.scss
+++ b/src/styles/List.scss
@@ -7,11 +7,11 @@
 
 .list-item {
   text-decoration: none;
-  color: $text-color;
+  @include variable(text-color, color, white);
   .list {
     padding: 20px 0;
     color: inherit;
-    background: $link-background-color;
+    @include variable(link-background-color, background-color, #39e09b);
     cursor: pointer;
     list-style: none;
     text-transform: capitalize;
@@ -47,6 +47,9 @@
   .play-button-icon {
     width: 10%;
     margin-right: 20px;
+    svg {
+      @include variable(link-background-color, color, black);
+    }
   }
   .title-description {
     font-size: 20px;
@@ -65,7 +68,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid lighten($icon-color, 50);
+  border-bottom: 1px solid;
 
   .platform-name {
     text-transform: capitalize;
@@ -73,7 +76,6 @@
     text-align: left;
   }
   .social-icon {
-    color: $icon-color;
     flex-grow: 1;
     margin-right: 20px;
     width: 40px;
