--- a/src/styles/List.scss
+++ b/src/styles/List.scss
@@ -12,13 +12,15 @@
     padding: 20px 0;
     color: inherit;
     @include variable(link-background-color, background-color, tomato);
-    @include variable(link-background-color, border-color, tomato);
     cursor: pointer;
     list-style: none;
     text-transform: capitalize;
     margin: 10px 0;
+    font-weight: 500;
+    @include variable(link-background-color, border-color, tomato);
+    border-width: 1px;
     border-radius: 5px;
-    border: 1px solid;
+    border-style: solid;
 
     &:hover {
       border: 1px solid;
@@ -69,6 +71,7 @@
     width: 70%;
     text-overflow: ellipsis;
     white-space: nowrap;
+    color: $expandable-text;
   }
 }
 
