--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,8 @@
 @import './variables.scss';
 @import 'theme.scss';
 
+// @todo add some media queries if needed
+
 @mixin flex-column-center {
   flex-direction: column;
   align-items: center;
@@ -16,6 +18,7 @@
   text-align: center;
   height: 100vh;
   width: 100vw;
+  min-width: 375px;
 }
 
 .container {
