--- a/src/styles/List.scss
+++ b/src/styles/List.scss
@@ -41,6 +41,12 @@
   min-height: 100px;
   padding: 20px;
   background-color: $expandable-color-light;
+  display: none;
+  border-radius: 5px;
+
+  &.open {
+    display: block;
+  }
 }
 
 .music-player-header {
